# RustinAction

./: .gitignore  Cargo.toml  README.md
ch01-cereals/: Cargo.toml
ch01-letters/: Cargo.toml
ch01-letters/src/: main.rs
ch01-penguins/: Cargo.toml
ch01-penguins/src/: main.rs
ch01-race/: Cargo.toml
ch01-race/src/: main.rs
ch02-3arrays/: Cargo.toml
ch02-3arrays/src/: main.rs
ch02-add-floats/: Cargo.toml
ch02-add-floats/src/: main.rs
ch02-add-with-lifetimes/: Cargo.toml
ch02-complex/: Cargo.toml
ch02-complex/src/: main.rs
ch02-first-steps/: Cargo.toml
ch02-first-steps/src/: main.rs
ch02-intro-to-numbers/: Cargo.toml
ch02-intro-to-numbers/src/: main.rs
ch02-introducing-vec/: Cargo.toml
ch02-introducing-vec/src/: main.rs
ch02-match-needles/: Cargo.toml
ch02-match-needles/src/: main.rs
ch02-non-base2/: Cargo.toml
ch02-simple-with-enumerate/: Cargo.toml
ch02-simple-with-enumerate/src/: main.rs
ch02-simple-with-linenums/: Cargo.toml
ch02-simple-with-linenums/src/: main.rs
ch02-str-simple-pattern/: Cargo.toml
ch02-str-simple-pattern/src/: main.rs
ch02-try-as/: Cargo.toml
ch02-try-as/src/: main.rs
ch02-while-true-incr-count/: Cargo.toml
ch02-while-true-incr-count/src/: main.rs
ch02-with-regex/: Cargo.toml
ch02-with-regex/src/: main.rs
ch03-defining-files-neatly/: Cargo.toml
ch03-defining-files-neatly/src/: main.rs
ch03-file-result/: Cargo.toml
ch03-file-result/src/: main.rs
ch03-file-states/: Cargo.toml
ch03-file-states/src/: main.rs
ch03-global-error/: Cargo.toml
ch03-global-error/src/: main.rs
ch03-implementing-display/: Cargo.toml
ch03-implementing-display/src/: main.rs
ch03-mock-file/: Cargo.toml
ch03-newtype-pattern/: Cargo.toml
ch03-newtype-pattern/src/: main.rs
ch03-not-quite-file/: Cargo.toml
ch03-not-quite-file/src/: main.rs
ch03-parse-log/: Cargo.toml
ch03-parse-log/src/: main.rs
ch03-skeleton-read-trait/: Cargo.toml
ch03-skeleton-read-trait/src/: main.rs
ch04-check-sats/: Cargo.toml
ch04-check-sats-2/: Cargo.toml
ch04-check-sats-2/src/: main.rs
ch04-check-sats-3/: Cargo.toml
ch04-check-sats-3/src/: main.rs
ch04-check-sats/src/: main.rs
ch04-sat-mailbox/: Cargo.toml
ch04-sat-mailbox/src/: main.rs
ch04-short-lived-strategy/: Cargo.toml
ch04-short-lived-strategy/src/: main.rs
ch05-endianness/: Cargo.toml
ch05-endianness/src/: main.rs
ch05-f32-as-u32/: Cargo.toml
ch05-int-vs-int/: Cargo.toml
ch05-int-vs-int/src/: main.rs
ch05-to-oblivion/: Cargo.toml
ch05-to-oblivion/src/: main.rs
ch05-visualizing-f32/: Cargo.toml
ch05-visualizing-f32/src/: main.rs
mandelbrot/src/: main.rs
